fixed overflow x from sustainable development

--- a/exercises/sustainable-development/sustainable.css
+++ b/exercises/sustainable-development/sustainable.css
@@ -15,6 +15,7 @@ body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
   color: var(--text-color);
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .main-container {
@@ -239,11 +240,13 @@ ul li a:hover {
 .multiple-img-container {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   /* align-items: center; */
+  /* overflow-x: hidden; */
 }
 
 .four-img-section {
-  width: 23%;
+  width: 22%;
 }
 
 .four-img-upper-part {
@@ -265,7 +268,8 @@ ul li a:hover {
 
 .one-man-box {
   height: 113px;
-  width: 111px;
+  width: 113px;
+  padding-left: -10px;
 }
 
 .three-girls {
@@ -621,4 +625,14 @@ footer .footer-right {
 
 .terms-condition {
   margin-bottom: 15px;
+}
+
+.currency-input-container {
+  display: flex;
+}
+
+.currency-input-container select {
+  border-right: 0;
+  border-radius: 0;
+  margin-right: -1px;
 }
